<resources>

    <string name="app_name">Satellites Movement</string>
    <string name="title_activity_splash_screen">Satellite Motion</string>
    <string name="app_desc">Modeling the movement of the satellites around the planet</string>
    <string name="splash_top_title">Satellites</string>
    <string name="splash_bottom_title">Motion</string>
    <string name="app_version_info">Version 1.0\nCopyright © 2012 Vinevcev D. I.\nWritten at Home PC</string>
    <string name="satellite_images_desc">A satellite image</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="earth_image_desc">The Earth image</string>
    <string name="demo_string">Dummy</string>
    <string name="menu_item_start">Start</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="about_title">About</string>
    <string name="settings_top_title">Settings</string>
    <string name="save_btn_text">Save</string>
    <string name="add_btn_text">Add</string>
    <string name="del_btn_txt">Delete</string>
    <string name="earth_collide_error">The first satellite collide with the earth. Its distance from the center of the
        earth shall be not less than %1$s</string>
    <string name="satellite_collide_error">Satellite with a height of %1$s encounters with the satellite from a height
        of %2$s. The distance between them should be at least %3$s</string>
    <string name="negative_time_error">Time must be positive value</string>
    <string name="negative_distance_error">Distance must be positive value</string>
    <string name="type_mismatch_error">Time must be long.\nDistance must be float</string>
    <string name="speed_hint">Time in ms</string>
    <string name="distance_hint">Distance in dp</string>
    <string name="speedTableHeader">Speed</string>
    <string name="distanceTableHeader">Distance</string>
    <string name="speed_help_text">Here, the speed - this time, in milliseconds, for which the satellite makes a
        complete revolution around the globe</string>
    <string name="distance_help_text">Distance - The length, in dp (density-independent pixels) from the center of the
        earth to the satellite center</string>
    <string name="satellites_have_not">There are no satellites. Refer to the settings screen to add satellites or through the options menu, or from the main menu</string>

</resources>